--- a/.github/workflows/stack-regression-tests-wl.yml
+++ b/.github/workflows/stack-regression-tests-wl.yml
@@ -1,8 +1,5 @@
 name: stack-regression-tests-wl
-on:
-  pull_request:
-    branches:
-      - main
+on: push
 jobs:
    stack-tests:
      runs-on: ubuntu-latest
