--- a/.github/workflows/stack-regression-tests-wl.yml
+++ b/.github/workflows/stack-regression-tests-wl.yml
@@ -1,8 +1,5 @@
 name: stack-regression-tests-wl
-on:
-  pull_request:
-    branches:
-      - main
+on: push
 jobs:
   stack-validation:
     runs-on: ubuntu-latest
@@ -35,7 +32,7 @@ jobs:
     
       - name: 'Setup: Install odo'
         run: | 
-          sudo curl -L https://mirror.openshift.com/pub/openshift-v4/clients/odo/latest/odo-linux-amd64 -o /usr/local/bin/odo
+          sudo curl -L https://developers.redhat.com/content-gateway/rest/mirror/pub/openshift-v4/clients/odo/latest/odo-linux-amd64 -o /usr/local/bin/odo
           sudo chmod +x /usr/local/bin/odo
 
       - name: 'Setup: Print version info'
@@ -56,51 +53,6 @@ jobs:
       - name: 'Setup: Build the devfile stack image'
         run: ./test/utils.sh buildStackImage wl
 
-      - name: 'Test: InnerLoop: Maven: Basic'
-        run: ./test/inner-loop/basic-test.sh wl maven
-
-      - name: 'Test: InnerLoop: Maven: Basic with mvnw'
-        run: ./test/inner-loop/basic-mvnw-test.sh wl maven
-
-      - name: 'Test: InnerLoop: Gradle: Basic'
-        run: ./test/inner-loop/basic-test.sh wl gradle
-
-      - name: 'Test: InnerLoop: Maven: Devfile regression'
-        if: success() || failure()
-        run: ./test/inner-loop/devfile-regression-test.sh  wl maven
-
-      - name: 'Test: InnerLoop: Gradle: Devfile regression'
-        if: success() || failure()
-        run: ./test/inner-loop/devfile-regression-test.sh wl gradle
-
-      - name: 'Test: InnerLoop: Maven: microprofile v3 regression'
-        if: success() || failure()
-        run: ./test/inner-loop/mp3-regression-test.sh wl maven
-
-      - name: 'Test: InnerLoop: Gradle: microprofile v3 regression'
-        if: success() || failure()
-        run: ./test/inner-loop/mp3-regression-test.sh wl gradle
-
-      - name: 'Test: InnerLoop: Maven: Uses an official Maven image'
-        if: success() || failure()
-        run: ./test/inner-loop/build-type-image-test.sh wl maven
-
-      - name: 'Test: InnerLoop: Gradle: Uses an official Gradle image'
-        if: success() || failure()
-        run: ./test/inner-loop/build-type-image-test.sh wl gradle
-
-      - name: 'Test: InnerLoop: Maven: m2 parent sample regression'
-        if: success() || failure()
-        run: ./test/inner-loop/sample-m2-parent-test.sh wl maven
-
-      - name: 'Test: InnerLoop: Maven: Parent plugin'
-        if: success() || failure()
-        run: ./test/inner-loop/parent-plugin-test.sh wl maven
-
-      - name: 'Test: InnerLoop: Maven: multi-module'
-        if: success() || failure()
-        run: ./test/inner-loop/multi-module.sh wl maven
-
       - name: 'Test: OuterLoop: Maven: Basic'
         if: success() || failure()
         run: ./test/outer-loop/basic-test.sh wl maven
@@ -108,27 +60,3 @@ jobs:
       - name: 'Test: OuterLoop: Gradle: Basic'
         if: success() || failure()
         run: ./test/outer-loop/basic-test.sh wl gradle
-
-      - name: 'Test: OuterLoop: Maven: Docker build MPH-off SCC-off args'
-        if: success() || failure()
-        run: ./test/outer-loop/docker-build-mphOff-sccOff-test.sh wl maven
-
-      - name: 'Test: OuterLoop: Gradle: Docker build MPH-off SCC-off args'
-        if: success() || failure()
-        run: ./test/outer-loop/docker-build-mphOff-sccOff-test.sh wl gradle
-
-      - name: 'Test: OuterLoop: Maven: Docker build with MPH-on SCC-off args'
-        if: success() || failure()
-        run: ./test/outer-loop/docker-build-mphOn-sccOff-test.sh wl maven
-
-      - name: 'Test: OuterLoop: Gradle: Docker build with MPH-on SCC-off args'
-        if: success() || failure()
-        run: ./test/outer-loop/docker-build-mphOn-sccOff-test.sh wl gradle
-
-      - name: 'Test: OuterLoop: Maven: Docker build with MPH-off SCC-on args'
-        if: success() || failure()
-        run: ./test/outer-loop/docker-build-mphOff-sccOn-test.sh wl maven
-
-      - name: 'Test: OuterLoop: Gradle: Docker build with MPH-off SCC-on args'
-        if: success() || failure()
-        run: ./test/outer-loop/docker-build-mphOff-sccOn-test.sh wl gradle 
